<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmpleadosFormulario" >

	<RelativeLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="10dp" >

	    <TextView
	        android:id="@+id/label_nombre"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/label_nombre_hipoteca"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/nombre"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/label_nombre"
	        android:ems="10" />

        <TextView
                android:id="@+id/label_departamento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_departamento"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_below="@+id/nombre"
                android:layout_marginTop="20dp" />

        <Spinner
                android:id="@+id/departamento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/label_departamento"
                android:ems="10"/>
	
	    <TextView
	        android:id="@+id/label_numNomina"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/label_numNomina"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:layout_below="@+id/departamento"
	        android:layout_marginTop="20dp" />
	    
	    <EditText
	        android:id="@+id/numNomina"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/label_numNomina"
	        android:ems="10"
	        android:inputType="textMultiLine">
	    </EditText>
	    
	    <TextView
	        android:id="@+id/label_direccion"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/label_direccion"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:layout_below="@+id/numNomina"
	        android:layout_marginTop="20dp" />
	    
	    <EditText
	        android:id="@+id/direccion"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/label_direccion"
	        android:ems="10">
	    </EditText>
	    
	    <TextView
	        android:id="@+id/label_curp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/label_curp"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:layout_below="@+id/direccion"
	        android:layout_marginTop="20dp" />
	    
	    <EditText
	        android:id="@+id/curp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/label_curp"
	        android:ems="10"
	        android:inputType="textMultiLine" >
	    </EditText>
	    
	    <TextView
	        android:id="@+id/label_sueldo"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/curp"
	        android:layout_marginTop="20dp"
	        android:text="@string/label_sueldo"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	   <EditText
	        android:id="@+id/sueldo"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/label_sueldo"
	        android:ems="10"
	        android:inputType="textMultiLine"/>

    	<TextView
	        android:id="@+id/label_fecha"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/label_fecha"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:layout_below="@+id/sueldo"
	        android:layout_marginTop="20dp" />
	    
	    <EditText
	        android:id="@+id/fecha"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/label_fecha"
	        android:ems="10"
	        android:inputType="textMultiLine">
	    </EditText>

<CheckBox
    android:id="@+id/activo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/fecha"
    android:layout_below="@+id/fecha"
    android:layout_marginTop="20dp"
    android:text="@string/label_activo" />


<LinearLayout
    android:id="@+id/botonera"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/activo"
    android:gravity="center"
    android:layout_marginTop="20dp"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/boton_cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_cancelar" />

    <Button
        android:id="@+id/boton_guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_guardar" />

</LinearLayout>


    </RelativeLayout>
</ScrollView>